# RuchasEngine

./: CMakeLists.txt  CMakeLists.txt~  README.md
docs/: Doxyfile.in
src/: main.cpp  positive.cpp
src/glad/: glad.c  glad.h
src/shaders/: shader.cpp  shader.h
src/tests/: test_positive.cpp
src/utils/: fileloader.cpp  fileloader.h
src/window/: window.cpp  window.h
